grammars/tree-sitter/grammar.js
		program: ($) => seq(optional($.hash_bang_line), repeat($.statement)),

		export_statement: ($) =>
			choice(
				seq(
					'export',
					choice(
						seq('*', $.from_clause),
						seq($.namespace_export, $.from_clause),
						seq($.export_clause, optional($.from_clause)),
						seq('default', choice($.declaration, seq($.expression, $._semicolon))),
						$.declaration,
					),
					$._semicolon,
				),
				seq(
					'export',
					'type',
					choice(seq('*', $.from_clause), seq($.export_clause, optional($.from_clause))),
					$._semicolon,
				),
			),

		expression_statement: ($) => seq($._expression_statement_expression, $._semicolon),

		_expression_statement_expression: ($) =>
			choice(
				$._expression_statement_primary_expression,
				$.satisfies_expression,
				$.assignment_expression,
				$.augmented_assignment_expression,
				$.await_expression,
				$.unary_expression,
				$.binary_expression,
				$.ternary_expression,
				$.update_expression,
				$.new_expression,
				$.yield_expression,
				$.parenthesized_expression,
				$.as_expression,
			),

		variable_declaration: ($) =>
			seq(choice('var', 'let', 'const'), commaSep1($.variable_declarator), $._semicolon),

		variable_declarator: ($) =>
			seq(
				field('name', choice($.identifier, $._destructuring_pattern)),
				optional($._type_annotation),
				optional($.initializer),
			),

		lexical_declaration: ($) =>
			seq(choice('let', 'const'), commaSep1($.variable_declarator), $._semicolon),

		statement_block: ($) => seq('{', repeat($.statement), '}'),

		component_statement: ($) =>
			choice(
				$.jsx_element,
				$.jsx_fragment,
				$.jsx_self_closing_element,
				$.jsx_statement_container,
				$.jsx_if_expression,
				$.jsx_for_expression,
				$.jsx_switch_expression,
				$.jsx_try_expression,
				prec(2, $.style_element),
				prec(2, $.script_element),
				$.variable_declaration,
				$.lexical_declaration,
				$.function_declaration,
				$.class_declaration,
				$.expression_statement,
				$.if_statement,
				$.switch_statement,
				$.for_statement,
				$.for_in_statement,
				$.for_of_statement,
				$.while_statement,
				$.do_statement,
				$.try_statement,
				$.return_statement,
				$.throw_statement,
				$.break_statement,
				$.continue_statement,
				$.debugger_statement,
				$.empty_statement,
			),

		// `<style>` blocks are setup statements of the enclosing template scope, so
		// they may sit anywhere among the statements before the output node (and,
		// via `_jsx_statement_container_trailing_style`, after it).
		_jsx_statement_container_statement: ($) =>
			choice(
				prec(2, $.style_element),
				$.export_statement,
				$.import_statement,
				$.declaration,
				$.module_declaration,
				$.variable_declaration,
				$.lexical_declaration,
				$.function_declaration,
				$.class_declaration,
				$._jsx_statement_container_expression_statement,
				$.if_statement,
				$.switch_statement,
				$.for_statement,
				$.for_in_statement,
				$.for_of_statement,
				$.while_statement,
				$.do_statement,
				$.try_statement,
				$.return_statement,
				$.throw_statement,
				$.break_statement,
				$.continue_statement,
				$.debugger_statement,
				$.empty_statement,
				$.statement_block,
			),

		_jsx_statement_container_output: ($) =>
			choice(
				$.jsx_element,
				$.jsx_fragment,
				$.jsx_self_closing_element,
				$.jsx_statement_container,
				$.jsx_if_expression,
				$.jsx_for_expression,
				$.jsx_switch_expression,
				$.jsx_try_expression,
				prec(2, $.script_element),
			),

		_jsx_statement_container_trailing_style: ($) => field('statement', $.style_element),

		jsx_statement_container: ($) =>
			seq(
				'@{',
				repeat(field('statement', $._jsx_statement_container_statement)),
				optional(
					seq(
						field('children', $._jsx_statement_container_output),
						repeat($._jsx_statement_container_trailing_style),
					),
				),
				'}',
			),

		jsx_template_block: ($) =>
			seq(
				'{',
				repeat(field('statement', $._jsx_statement_container_statement)),
				optional(
					seq(
						field('children', $._jsx_statement_container_output),
						repeat($._jsx_statement_container_trailing_style),
					),
				),
				'}',
			),

		_jsx_directive_body: ($) => choice($.jsx_template_block, $._jsx_statement_container_output),

		_jsx_continuation_gap: ($) => $.jsx_text,

		jsx_if_expression: ($) =>
			choice(
				prec.right(
					2,
					seq(
						'@',
						'if',
						field('condition', $.parenthesized_expression),
						field('consequence', $._jsx_directive_body),
						$.jsx_else_clause,
					),
				),
				prec.right(
					1,
					seq(
						'@',
						'if',
						field('condition', $.parenthesized_expression),
						field('consequence', $._jsx_directive_body),
					),
				),
			),

		jsx_else_clause: ($) =>
			prec.right(
				2,
				seq('@else', field('alternative', choice($.jsx_else_if_clause, $._jsx_directive_body))),
			),

		jsx_else_if_clause: ($) =>
			choice(
				prec.right(
					2,
					seq(
						'if',
						field('condition', $.parenthesized_expression),
						field('consequence', $._jsx_directive_body),
						$.jsx_else_clause,
					),
				),
				prec.right(
					1,
					seq(
						'if',
						field('condition', $.parenthesized_expression),
						field('consequence', $._jsx_directive_body),
					),
				),
			),

		jsx_for_expression: ($) =>
			prec.right(
				1,
				seq(
					'@',
					'for',
					optional('await'),
					'(',
					choice(
						seq(choice('let', 'const', 'var'), choice($._destructuring_pattern, $.identifier)),
						$.identifier,
					),
					choice('of', 'in'),
					field('right', $.expression),
					optional(seq(';', 'index', $.identifier)),
					optional(seq(';', 'key', $.expression)),
					')',
					field('body', $.jsx_template_block),
					optional($._jsx_continuation_gap),
					optional($.jsx_empty_clause),
				),
			),

		jsx_empty_clause: ($) => prec.right(2, seq('@empty', field('empty', $.jsx_template_block))),

		jsx_switch_expression: ($) =>
			prec(
				1,
				seq(
					'@',
					'switch',
					field('value', $.parenthesized_expression),
					field('body', $.jsx_switch_body),
				),
			),

		jsx_switch_body: ($) => seq('{', repeat(choice($.jsx_switch_case, $.jsx_switch_default)), '}'),

		jsx_switch_case: ($) =>
			seq('@case', field('value', $.expression), ':', field('body', $.jsx_template_block)),

		jsx_switch_default: ($) => seq('@default', ':', field('body', $.jsx_template_block)),

		jsx_try_expression: ($) =>
			choice(
				prec.right(
					2,
					seq(
						'@',
						'try',
						field('body', $.jsx_template_block),
						repeat1(
							choice(
								field('pending', $.jsx_pending_clause),
								field('handler', $.jsx_catch_clause),
								field('finalizer', $.jsx_finally_clause),
							),
						),
					),
				),
				prec.right(
					1,
					seq('@', 'try', field('body', $.jsx_template_block), optional($._jsx_continuation_gap)),
				),
			),

		jsx_pending_clause: ($) => prec.right(2, seq('@pending', field('body', $.jsx_template_block))),

		jsx_catch_clause: ($) =>
			prec.right(
				2,
				seq(
					'@catch',
					optional(
						seq(
							'(',
							commaSep1(field('parameter', choice($.identifier, $._destructuring_pattern))),
							')',
						),
					),
					field('body', $.jsx_template_block),
				),
			),

		function_declaration: ($) =>
			prec.dynamic(
				PREC.DECLARATION,
				seq(
					optional('async'),
					'function',
					optional('*'),
					field('name', $.identifier),
					optional(field('type_parameters', $.type_parameters)),
					field('parameters', $.formal_parameters),
					optional($._type_annotation),
					field('body', choice($.statement_block, $.jsx_statement_container)),
				),
			),

		formal_parameters: ($) => seq('(', optional(commaSep($._formal_parameter)), optional(','), ')'),

		_formal_parameter: ($) => choice($.required_parameter, $.rest_parameter),

		required_parameter: ($) =>
			seq(
				field('pattern', choice($.identifier, $._destructuring_pattern)),
				optional('?'),
				optional($._type_annotation),
				optional($.initializer),
			),

		_destructuring_pattern: ($) => choice($.object_pattern, $.array_pattern),

		object_pattern: ($) =>
			seq(
				'{',
				commaSep(
					choice(
						$.pair_pattern,
						$.rest_pattern,
						$.object_assignment_pattern,
						$.shorthand_property_identifier_pattern,
					),
				),
				optional(','),
				'}',
			),

		parenthesized_expression: ($) => seq('(', $.expression, ')'),

		binary_expression: ($) =>
			choice(
				...[
					['&&', PREC.AND],
					['||', PREC.OR],
					['??', PREC.OR],
					['>>', PREC.TIMES],
					['>>>', PREC.TIMES],
					['<<', PREC.TIMES],
					['&', PREC.AND],
					['^', PREC.OR],
					['|', PREC.OR],
					['+', PREC.PLUS],
					['-', PREC.PLUS],
					['*', PREC.TIMES],
					['/', PREC.TIMES],
					['%', PREC.TIMES],
					['**', PREC.EXP],
					['<', PREC.REL],
					['<=', PREC.REL],
					['==', PREC.EQUALITY],
					['===', PREC.EQUALITY],
					['!=', PREC.EQUALITY],
					['!==', PREC.EQUALITY],
					['>=', PREC.REL],
					['>', PREC.REL],
					['instanceof', PREC.REL],
					['in', PREC.REL],
				].map(([operator, precedence]) =>
					prec.left(
						precedence,
						seq(
							field('left', $.expression),
							field('operator', operator),
							field('right', $.expression),
						),
					),
				),
			),

		call_expression: ($) =>
			prec(
				PREC.CALL,
				seq(
					field('function', choice($.expression, $.import)),
					field('arguments', choice($.arguments, $.template_string)),
				),
			),

		member_expression: ($) =>
			prec(
				PREC.MEMBER,
				seq(
					field('object', choice($.expression, $.primary_expression)),
					choice('.', '?.'),
					field('property', choice($.identifier, $.private_property_identifier)),
				),
			),

		arguments: ($) =>
			seq('(', commaSep(choice($.expression, $.spread_element)), optional(','), ')'),

		arrow_function: ($) =>
			seq(
				optional('async'),
				choice(field('parameter', $.identifier), field('parameters', $.formal_parameters)),
				optional($._type_annotation),
				'=>',
				field('body', choice($.expression, $.statement_block, $.jsx_statement_container)),
			),

		shorthand_property_identifier: ($) =>
			alias($.identifier, $.shorthand_property_identifier_pattern),

		shorthand_property_identifier_pattern: ($) =>
			alias($.identifier, $.shorthand_property_identifier),

		jsx_element: ($) =>
			seq(
				field('open_tag', $.jsx_opening_element),
				repeat(field('children', $._jsx_child)),
				field('close_tag', $.jsx_closing_element),
			),

		jsx_fragment: ($) =>
			seq(
				field('open_tag', $.jsx_opening_fragment),
				repeat(field('children', $._jsx_child)),
				field('close_tag', $.jsx_closing_fragment),
			),

		jsx_opening_element: ($) =>
			seq(
				'<',
				field('name', $.jsx_element_name),
				repeat(field('attribute', $._jsx_attribute)),
				'>',
			),

		jsx_opening_fragment: () => seq('<', '>'),

		jsx_closing_element: ($) => seq('</', field('name', $.jsx_element_name), '>'),

		jsx_closing_fragment: () => seq('</', '>'),

		jsx_self_closing_element: ($) =>
			seq(
				'<',
				field('name', $.jsx_non_namespaced_element_name),
				repeat(field('attribute', $._jsx_attribute)),
				'/>',
			),

		// Dynamic tags (`<{expr}>`) hold a single expression; the node is aliased
		// to jsx_expression so editor queries reuse the existing container shape
		// without introducing a new node type.
		_jsx_dynamic_element_name: ($) => alias($.jsx_dynamic_tag_expression, $.jsx_expression),

		jsx_element_name: ($) =>
			choice($.identifier, $.jsx_namespace_name, $.jsx_member_name, $._jsx_dynamic_element_name),

		// Non-namespaced variant (used for self-closing elements)
		jsx_non_namespaced_element_name: ($) =>
			choice($.identifier, $.jsx_member_name, $._jsx_dynamic_element_name),

		// Support dotted names in JSX element names (e.g. Namespace.Component)
		// Implemented iteratively to avoid left recursion
		_jsx_attribute: ($) => choice($.jsx_attribute, $.jsx_expression),

		jsx_attribute: ($) =>
			seq(
				field('name', choice($.identifier, $.jsx_namespace_name, $.jsx_hyphenated_name)),
				optional(seq('=', field('value', $._jsx_attribute_value))),
			),

		jsx_expression: ($) =>
			seq(
				'{',
				optional(
					choice(
						$.expression,
						$.spread_element,
						seq('...', $.expression),
						repeat1($.component_statement),
					),
				),
				'}',
			),

		_jsx_attribute_value: ($) =>
			choice($.string, $.jsx_expression, $.jsx_element, $.jsx_fragment, $.jsx_self_closing_element),

		_jsx_child: ($) =>
			choice(
				$.jsx_statement_container,
				$.jsx_if_expression,
				$.jsx_for_expression,
				$.jsx_switch_expression,
				$.jsx_try_expression,
				prec(2, $.style_element),
				prec(2, $.script_element),
				$.jsx_text,
				$.jsx_element,
				$.jsx_fragment,
				$.jsx_self_closing_element,
				$.jsx_expression,
			),

		identifier: ($) => {
			const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			const alphanumeric =
				/[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			return token(seq(alpha, repeat(alphanumeric)));
		},

		number: ($) => {
			const hex_literal = seq(choice('0x', '0X'), /[\da-fA-F](_?[\da-fA-F])*/);

			const decimal_digits = /\d(_?\d)*/;
			const signed_integer = seq(optional(choice('-', '+')), decimal_digits);
			const exponent_part = seq(choice('e', 'E'), signed_integer);

			const binary_literal = seq(choice('0b', '0B'), /[0-1](_?[0-1])*/);

			const octal_literal = seq(choice('0o', '0O'), /[0-7](_?[0-7])*/);

			const bigint_literal = seq(
				choice(hex_literal, binary_literal, octal_literal, decimal_digits),
				'n',
			);

			const decimal_integer_literal = choice(
				'0',
				seq(optional('0'), /[1-9]/, optional(seq(optional('_'), decimal_digits))),
			);

			const decimal_literal = choice(
				seq(decimal_integer_literal, '.', optional(decimal_digits), optional(exponent_part)),
				seq('.', decimal_digits, optional(exponent_part)),
				seq(decimal_integer_literal, exponent_part),
				decimal_digits,
			);

			return token(
				choice(hex_literal, decimal_literal, binary_literal, octal_literal, bigint_literal),
			);
		},

		string: ($) =>
			choice(
				seq('"', repeat(choice(token.immediate(prec(1, /[^"\\\n]+/)), $.escape_sequence)), '"'),
				seq("'", repeat(choice(token.immediate(prec(1, /[^'\\\n]+/)), $.escape_sequence)), "'"),
			),

		_type_annotation: ($) => seq(':', $.type),

		type: ($) =>
			choice(
				$.identifier,
				$.predefined_type,
				$.type_identifier,
				$.nested_type_identifier,
				$.generic_type,
				$.object_type,
				$.array_type,
				$.tuple_type,
				$.union_type,
				$.intersection_type,
				$.function_type,
				$.literal_type,
				$.parenthesized_type,
			),

		predefined_type: ($) =>
			choice('any', 'number', 'boolean', 'string', 'symbol', 'void', 'unknown', 'never', 'object'),

		function_type: ($) => seq(optional($.type_parameters), $.formal_parameters, '=>', $.type),

		initializer: ($) => seq('=', $.expression),

		_semicolon: ($) => choice($._automatic_semicolon, ';'),
	},
});

function commaSep(rule) {
	return optional(commaSep1(rule));
}

function commaSep1(rule) {
	return seq(rule, repeat(seq(',', rule)));
}
