grammars/tree-sitter/test/corpus/control-flow.txt
==================
For-of Loop
==================

const List = ({ items }) => <>
  <ul>
    @for (const item of items) {
      <li>{item.text}</li>
    }
  </ul>
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters
            (required_parameter
              pattern: (object_pattern
                (shorthand_property_identifier_pattern
                  (shorthand_property_identifier)))))
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_text)
            children: (jsx_element
              open_tag: (jsx_opening_element
                name: (jsx_element_name
                  (identifier)))
              children: (jsx_for_expression
                (identifier)
                right: (identifier)
                body: (jsx_template_block
                  children: (jsx_element
                    open_tag: (jsx_opening_element
                      name: (jsx_element_name
                        (identifier)))
                    children: (jsx_expression
                      (component_statement
                        (expression_statement
                          (member_expression
                            object: (identifier)
                            property: (identifier)))))
                    close_tag: (jsx_closing_element
                      name: (jsx_element_name
                        (identifier)))))
                (jsx_text))
              close_tag: (jsx_closing_element
                name: (jsx_element_name
                  (identifier))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
For-of with index and key
==================

const List = ({ items }) => <>
  <ul>
    @for (const item of items; index i; key item.id) {
      <li>{item.text}</li>
    }
  </ul>
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters
            (required_parameter
              pattern: (object_pattern
                (shorthand_property_identifier_pattern
                  (shorthand_property_identifier)))))
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_text)
            children: (jsx_element
              open_tag: (jsx_opening_element
                name: (jsx_element_name
                  (identifier)))
              children: (jsx_for_expression
                (identifier)
                right: (identifier)
                (identifier)
                (member_expression
                  object: (identifier)
                  property: (identifier))
                body: (jsx_template_block
                  children: (jsx_element
                    open_tag: (jsx_opening_element
                      name: (jsx_element_name
                        (identifier)))
                    children: (jsx_expression
                      (component_statement
                        (expression_statement
                          (member_expression
                            object: (identifier)
                            property: (identifier)))))
                    close_tag: (jsx_closing_element
                      name: (jsx_element_name
                        (identifier)))))
                (jsx_text))
              close_tag: (jsx_closing_element
                name: (jsx_element_name
                  (identifier))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
For-of with empty fallback
==================

const List = ({ items }) => <>
  <ul>
    @for (const item of items) {
      <li>{item.text}</li>
    } @empty {
      <li>No items</li>
    }
  </ul>
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters
            (required_parameter
              pattern: (object_pattern
                (shorthand_property_identifier_pattern
                  (shorthand_property_identifier)))))
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_text)
            children: (jsx_element
              open_tag: (jsx_opening_element
                name: (jsx_element_name
                  (identifier)))
              children: (jsx_for_expression
                (identifier)
                right: (identifier)
                body: (jsx_template_block
                  children: (jsx_element
                    open_tag: (jsx_opening_element
                      name: (jsx_element_name
                        (identifier)))
                    children: (jsx_expression
                      (component_statement
                        (expression_statement
                          (member_expression
                            object: (identifier)
                            property: (identifier)))))
                    close_tag: (jsx_closing_element
                      name: (jsx_element_name
                        (identifier)))))
                (jsx_empty_clause
                  empty: (jsx_template_block
                    children: (jsx_element
                      open_tag: (jsx_opening_element
                        name: (jsx_element_name
                          (identifier)))
                      children: (jsx_text)
                      close_tag: (jsx_closing_element
                        name: (jsx_element_name
                          (identifier)))))))
              children: (jsx_text)
              close_tag: (jsx_closing_element
                name: (jsx_element_name
                  (identifier))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
If Statement in Template
==================

const App = ({ show }) => <>
  @if (show) {
    <div>{'Visible'}</div>
  } @else {
    <div>{'Hidden'}</div>
  }
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters
            (required_parameter
              pattern: (object_pattern
                (shorthand_property_identifier_pattern
                  (shorthand_property_identifier)))))
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_if_expression
              condition: (parenthesized_expression
                (identifier))
              consequence: (jsx_template_block
                children: (jsx_element
                  open_tag: (jsx_opening_element
                    name: (jsx_element_name
                      (identifier)))
                  children: (jsx_expression
                    (component_statement
                      (expression_statement
                        (string))))
                  close_tag: (jsx_closing_element
                    name: (jsx_element_name
                      (identifier)))))
              (jsx_else_clause
                alternative: (jsx_template_block
                  children: (jsx_element
                    open_tag: (jsx_opening_element
                      name: (jsx_element_name
                        (identifier)))
                    children: (jsx_expression
                      (component_statement
                        (expression_statement
                          (string))))
                    close_tag: (jsx_closing_element
                      name: (jsx_element_name
                        (identifier)))))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
Directive Block With Statement Containers
==================

const App = ({ ready }) => <>
  @if (ready) {
    @{
      const message = 'Ready';
      <p>{message}</p>
    }
  }
  @try {
    @{
      const item = loadItem();
      <Card>{item.name}</Card>
    }
  } @catch (error) {
    @{
      const fallback = error.message;
      <p>{fallback}</p>
    }
  }
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters
            (required_parameter
              pattern: (object_pattern
                (shorthand_property_identifier_pattern
                  (shorthand_property_identifier)))))
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_if_expression
              condition: (parenthesized_expression
                (identifier))
              consequence: (jsx_template_block
                children: (jsx_statement_container
                  statement: (variable_declaration
                    (variable_declarator
                      name: (identifier)
                      (initializer
                        (string))))
                  children: (jsx_element
                    open_tag: (jsx_opening_element
                      name: (jsx_element_name
                        (identifier)))
                    children: (jsx_expression
                      (component_statement
                        (expression_statement
                          (identifier))))
                    close_tag: (jsx_closing_element
                      name: (jsx_element_name
                        (identifier)))))))
            children: (jsx_try_expression
              body: (jsx_template_block
                children: (jsx_statement_container
                  statement: (variable_declaration
                    (variable_declarator
                      name: (identifier)
                      (initializer
                        (call_expression
                          function: (identifier)
                          arguments: (arguments)))))
                  children: (jsx_element
                    open_tag: (jsx_opening_element
                      name: (jsx_element_name
                        (identifier)))
                    children: (jsx_expression
                      (component_statement
                        (expression_statement
                          (member_expression
                            object: (identifier)
                            property: (identifier)))))
                    close_tag: (jsx_closing_element
                      name: (jsx_element_name
                        (identifier))))))
              handler: (jsx_catch_clause
                parameter: (identifier)
                body: (jsx_template_block
                  children: (jsx_statement_container
                    statement: (variable_declaration
                      (variable_declarator
                        name: (identifier)
                        (initializer
                          (member_expression
                            object: (identifier)
                            property: (identifier)))))
                    children: (jsx_element
                      open_tag: (jsx_opening_element
                        name: (jsx_element_name
                          (identifier)))
                      children: (jsx_expression
                        (component_statement
                          (expression_statement
                            (identifier))))
                      close_tag: (jsx_closing_element
                        name: (jsx_element_name
                          (identifier))))))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
Directive Block With Code-Only Statement Containers
==================

const App = ({ ready }) => <>
  @if (ready) {
    @{}
  }
  @try {
    @{}
  } @pending {
    @{}
  }
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters
            (required_parameter
              pattern: (object_pattern
                (shorthand_property_identifier_pattern
                  (shorthand_property_identifier)))))
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_if_expression
              condition: (parenthesized_expression
                (identifier))
              consequence: (jsx_template_block
                children: (jsx_statement_container)))
            children: (jsx_try_expression
              body: (jsx_template_block
                children: (jsx_statement_container))
              pending: (jsx_pending_clause
                body: (jsx_template_block
                  children: (jsx_statement_container))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
Else If Chain
==================

const Status = ({ status }) => <>
  @if (status === 'loading') {
    <p>Loading...</p>
  } @else if (status === 'success') {
    <p>Done</p>
  } @else if (status === 'error') {
    <p>Error</p>
  } @else {
    <p>Unknown</p>
  }
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters
            (required_parameter
              pattern: (object_pattern
                (shorthand_property_identifier_pattern
                  (shorthand_property_identifier)))))
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_if_expression
              condition: (parenthesized_expression
                (binary_expression
                  left: (identifier)
                  right: (string)))
              consequence: (jsx_template_block
                children: (jsx_element
                  open_tag: (jsx_opening_element
                    name: (jsx_element_name
                      (identifier)))
                  children: (jsx_text)
                  close_tag: (jsx_closing_element
                    name: (jsx_element_name
                      (identifier)))))
              (jsx_else_clause
                alternative: (jsx_else_if_clause
                  condition: (parenthesized_expression
                    (binary_expression
                      left: (identifier)
                      right: (string)))
                  consequence: (jsx_template_block
                    children: (jsx_element
                      open_tag: (jsx_opening_element
                        name: (jsx_element_name
                          (identifier)))
                      children: (jsx_text)
                      close_tag: (jsx_closing_element
                        name: (jsx_element_name
                          (identifier)))))
                  (jsx_else_clause
                    alternative: (jsx_else_if_clause
                      condition: (parenthesized_expression
                        (binary_expression
                          left: (identifier)
                          right: (string)))
                      consequence: (jsx_template_block
                        children: (jsx_element
                          open_tag: (jsx_opening_element
                            name: (jsx_element_name
                              (identifier)))
                          children: (jsx_text)
                          close_tag: (jsx_closing_element
                            name: (jsx_element_name
                              (identifier)))))
                      (jsx_else_clause
                        alternative: (jsx_template_block
                          children: (jsx_element
                            open_tag: (jsx_opening_element
                              name: (jsx_element_name
                                (identifier)))
                            children: (jsx_text)
                            close_tag: (jsx_closing_element
                              name: (jsx_element_name
                                (identifier)))))))))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
Switch in Template
==================

const Status = ({ status }) => <>
  @switch (status) {
    @case 'loading': {
      <p>{'Loading...'}</p>
    }
    @case 'success': {
      <p>{'Success!'}</p>
    }
    @default: {
      <p>{'Unknown'}</p>
    }
  }
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters
            (required_parameter
              pattern: (object_pattern
                (shorthand_property_identifier_pattern
                  (shorthand_property_identifier)))))
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_switch_expression
              value: (parenthesized_expression
                (identifier))
              body: (jsx_switch_body
                (jsx_switch_case
                  value: (string)
                  body: (jsx_template_block
                    children: (jsx_element
                      open_tag: (jsx_opening_element
                        name: (jsx_element_name
                          (identifier)))
                      children: (jsx_expression
                        (component_statement
                          (expression_statement
                            (string))))
                      close_tag: (jsx_closing_element
                        name: (jsx_element_name
                          (identifier))))))
                (jsx_switch_case
                  value: (string)
                  body: (jsx_template_block
                    children: (jsx_element
                      open_tag: (jsx_opening_element
                        name: (jsx_element_name
                          (identifier)))
                      children: (jsx_expression
                        (component_statement
                          (expression_statement
                            (string))))
                      close_tag: (jsx_closing_element
                        name: (jsx_element_name
                          (identifier))))))
                (jsx_switch_default
                  body: (jsx_template_block
                    children: (jsx_element
                      open_tag: (jsx_opening_element
                        name: (jsx_element_name
                          (identifier)))
                      children: (jsx_expression
                        (component_statement
                          (expression_statement
                            (string))))
                      close_tag: (jsx_closing_element
                        name: (jsx_element_name
                          (identifier))))))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
Try Pending Block
==================

const SuspenseBoundary = () => <>
  @try {
    <AsyncComponent />
  } @pending {
    <p>{'Loading...'}</p>
  }
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters)
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_try_expression
              body: (jsx_template_block
                children: (jsx_self_closing_element
                  name: (jsx_non_namespaced_element_name
                    (identifier))))
              pending: (jsx_pending_clause
                body: (jsx_template_block
                  children: (jsx_element
                    open_tag: (jsx_opening_element
                      name: (jsx_element_name
                        (identifier)))
                    children: (jsx_expression
                      (component_statement
                        (expression_statement
                          (string))))
                    close_tag: (jsx_closing_element
                      name: (jsx_element_name
                        (identifier)))))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
Try-Catch Error Boundary
==================

const App = () => <>
  @try {
    <ComponentThatMayFail />
  } @catch (e) {
    <div>{'Error: '}{e.message}</div>
  }
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters)
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_try_expression
              body: (jsx_template_block
                children: (jsx_self_closing_element
                  name: (jsx_non_namespaced_element_name
                    (identifier))))
              handler: (jsx_catch_clause
                parameter: (identifier)
                body: (jsx_template_block
                  children: (jsx_element
                    open_tag: (jsx_opening_element
                      name: (jsx_element_name
                        (identifier)))
                    children: (jsx_expression
                      (component_statement
                        (expression_statement
                          (string))))
                    children: (jsx_expression
                      (component_statement
                        (expression_statement
                          (member_expression
                            object: (identifier)
                            property: (identifier)))))
                    close_tag: (jsx_closing_element
                      name: (jsx_element_name
                        (identifier)))))))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
Statement Container Function Body
==================

function App() @{
  const title = 'Ready';

  <div>{title}</div>
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters)
    (jsx_statement_container
      (variable_declaration
        (variable_declarator
          (identifier)
          (initializer
            (string))))
      (jsx_element
        (jsx_opening_element
          (jsx_element_name
            (identifier)))
        (jsx_expression
          (component_statement
            (expression_statement
              (identifier))))
        (jsx_closing_element
          (jsx_element_name
            (identifier)))))))

==================
Statement Container If Directive JSX Body
==================

function App({ visible }) @{
  @if (visible) <div class="status">Visible: {String(visible)}</div>
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (formal_parameters
      (required_parameter
        pattern: (object_pattern
          (shorthand_property_identifier_pattern
            (shorthand_property_identifier)))))
    body: (jsx_statement_container
      children: (jsx_if_expression
        condition: (parenthesized_expression
          (identifier))
        consequence: (jsx_element
          open_tag: (jsx_opening_element
            name: (jsx_element_name
              (identifier))
            attribute: (jsx_attribute
              name: (identifier)
              value: (string)))
          children: (jsx_text)
          children: (jsx_expression
            (component_statement
              (expression_statement
                (call_expression
                  function: (identifier)
                  arguments: (arguments
                    (identifier))))))
          close_tag: (jsx_closing_element
            name: (jsx_element_name
              (identifier))))))))

==================
Statement Container Try Output
==================

function App() @{
  @try {
    <ThrowingChild />
  } @pending {
    <p>{'loading...'}</p>
  } @catch (err) {
    <p>{'caught error'}</p>
  }
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters)
    (jsx_statement_container
      (jsx_try_expression
        (jsx_template_block
          (jsx_self_closing_element
            (jsx_non_namespaced_element_name
              (identifier))))
        (jsx_pending_clause
          (jsx_template_block
            (jsx_element
              (jsx_opening_element
                (jsx_element_name
                  (identifier)))
              (jsx_expression
                (component_statement
                  (expression_statement
                    (string))))
              (jsx_closing_element
                (jsx_element_name
                  (identifier))))))
        (jsx_catch_clause
          (identifier)
          (jsx_template_block
            (jsx_element
              (jsx_opening_element
                (jsx_element_name
                  (identifier)))
              (jsx_expression
                (component_statement
                  (expression_statement
                    (string))))
              (jsx_closing_element
                (jsx_element_name
                  (identifier))))))))))

==================
Statement Container Arrow Body
==================

const App = () => @{
  const title = 'Ready';

  <div>{title}</div>
};

---

(program
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (arrow_function
          (formal_parameters)
          (jsx_statement_container
            (variable_declaration
              (variable_declarator
                (identifier)
                (initializer
                  (string))))
            (jsx_element
              (jsx_opening_element
                (jsx_element_name
                  (identifier)))
              (jsx_expression
                (component_statement
                  (expression_statement
                    (identifier))))
              (jsx_closing_element
                (jsx_element_name
                  (identifier))))))))))

==================
Statement Container Rejects Post-JSX Setup
==================

const App = () => @{
  <div />
  const x = 1;
  <span />
};
